NuCivic/nucivic-internal#356, NuCivic/nucivic-internal#356, NuCivic/nucivic-internal#352 Adding reduceXTicks option to avoid many ticks in the chart and overlapping labels.

--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,8 @@
 .recline-slickgrid *{
 	box-sizing: content-box;
 }
+/* NVD3 Overrides */
+.nvtooltip h3 {
+	font-size: 13px;
+	font-weight: bold !important;
+}
